--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,10 @@
 }
 body{
 
-  background-color: blueviolet;
+  background: #3494e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3494e6, #ec6ead); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3494e6, #ec6ead); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 table{
 
